# puzzles

./: .gitignore  docker-compose.yml  pyproject.toml
docker/: Dockerfile
puzzles/: schema.py  settings.py  urls.py  wsgi.py
puzzles/account/: admin.py  lib.py  schemas.py  views.py
puzzles/account/migrations/: 0001_initial.py
puzzles/account/models/: user.py
puzzles/cart/: admin.py  lib.py  models.py  schemas.py
puzzles/cart/graph/: mapper.py  mutation.py  query.py  types.py
puzzles/cart/migrations/: 0001_initial.py  0002_remove_cart_token_cart_session_id.py  0003_alter_cartitem_verification_photo.py
puzzles/catalog/: admin.py
puzzles/catalog/graph/: query.py  types.py
puzzles/catalog/migrations/: 0001_initial.py  0002_puzzle_catalog_puz_search__0a5818_gin.py
puzzles/catalog/models/: __init__.py  puzzle.py  puzzle_attribute.py
puzzles/puzzles/: asgi.py  settings.py  urls.py
puzzles/puzzles/models/: attribute.py  puzzle.py  puzzle_attribute.py  rental.py  rental_item.py  reservation.py  review.py  user.py
puzzles/rental/: admin.py
puzzles/rental/graph/: mutation.py  query.py  types.py
puzzles/rental/migrations/: 0001_initial.py  0002_rental_cart_delete_rentalitem.py
puzzles/rental/models/: __init__.py  rental.py  rental_item.py
puzzles/review/graph/: mutation.py  query.py  types.py
puzzles/review/models/: review.py
puzzles/utils/: api.py  db.py  numbers.py
